GL/src/test/deca/syntax/valid/deca_sans_objet/print_ln.deca
// Description :
//  Teste les instructions d'affichage print et println.
//
// Resultats :
// OK
{
    print(1, 2, 3);
    println("hello");
}
