GL/src/test/deca/syntax/invalid/deca_sans_objet/virgule_en_trop.deca
// Description :
//  test virgule en trop
//
// Resultat :
// Erreur lexicale
// Ligne 8 : caractère inattendu ')'
{
    print(1,);
}
